# ModulePembelajaran

./: .gitignore  CLAUDE.md  EXPECTED_OUTCOME.txt  Note 17 April 2026.txt  TODO.txt  petabesar.md  representasifitur.md
ModulePembelajaran/template_repo/: README.md  pyproject.toml
ModulePembelajaran/template_repo/configs/: ae_cifar.yaml  baseline.yaml  focal_freeze.yaml  lstm_timeseries.yaml  mlp_mnist.yaml  mlp_tabular.yaml  transformer_mini.yaml
ModulePembelajaran/template_repo/docs/: experiment_log_template.md  prereg_template.md
ModulePembelajaran/template_repo/experiments/: results.csv
ModulePembelajaran/template_repo/notebooks/: lab1_baseline_cnn.ipynb  lab1b_representasi.ipynb  lab1c_mlp_numpy.ipynb  lab2_loss_freeze_ablation.ipynb  lab3_config_logging.ipynb  lab3b_sequence_lstm.ipynb  lab4_eda_leakage.ipynb  lab5_llm_assisted_loop.ipynb  lab5b_domain_teks.ipynb  lab6_adopt_external_repo.ipynb  lab6b_transformer_mini.ipynb  lab7_streamlit_demo.ipynb  lab7b_autoencoder.ipynb  lab8_runpod_remote.ipynb  lab9_paper_to_experiment.ipynb  lab_breadth_autoencoder.ipynb  lab_w10_paper_to_code.ipynb  lab_w12_demo_app.ipynb  lab_w1_mlp_numpy.ipynb  lab_w1_tabular_heads.ipynb  lab_w2_cnn_baseline.ipynb  lab_w3_loss_ablation.ipynb  lab_w4_experiment_tracking.ipynb  lab_w5_lstm_sequence.ipynb  lab_w6_eda_leakage.ipynb  lab_w6_feature_representation.ipynb  lab_w6_temporal_leakage.ipynb  lab_w7_llm_assisted.ipynb  lab_w7_repo_adoption.ipynb  lab_w7_text_classification.ipynb  lab_w7_transformer_mini.ipynb  lab_w8_remote_training.ipynb  lab_w9_multimodal_ablation.ipynb  (+1 more)
(+109 files in other folders)
